Implementar acesso HTTP e HTTPS com certificados autoassinados
- Criada configuração nginx-fallback.conf com certificados autoassinados
- Configurado acesso HTTP e HTTPS funcionando imediatamente
- Ajustados headers de segurança para compatibilidade com OpenEMR
- Atualizada documentação e scripts de setup
- Mantida opção de upgrade para Let's Encrypt

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>

--- a/nginx/nginx-fallback.conf
+++ b/nginx/nginx-fallback.conf
@@ -46,34 +46,26 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme; # $scheme will be 'http'
-            proxy_set_header X-Forwarded-Host $server_name; # Will be 'localhost'
-            proxy_set_header X-Forwarded-Port $server_port; # Will be '80'
-            
-            # Copied from HTTPS block for consistency
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header X-Forwarded-Port $server_port;
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
-            
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
             proxy_busy_buffers_size 8k;
         }
     }
 
-    # HTTPS server (for emr.saraivavision.com.br)
-    # Uses self-signed certificates as fallback, can be upgraded to Let's Encrypt later
+    # HTTPS server using self-signed certificates
     server {
         listen 443 ssl;
-        server_name emr.saraivavision.com.br;
+        server_name emr.saraivavision.com.br localhost;
 
-        # Try Let's Encrypt certificates first, fallback to self-signed
-        ssl_certificate /etc/letsencrypt/live/emr.saraivavision.com.br/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/emr.saraivavision.com.br/privkey.pem;
-
-        # Fallback to self-signed certificates if Let's Encrypt not available
-        # ssl_certificate /etc/ssl/certs/openemr.crt;
-        # ssl_certificate_key /etc/ssl/private/openemr.key;
+        # Self-signed certificates
+        ssl_certificate /etc/ssl/certs/openemr.crt;
+        ssl_certificate_key /etc/ssl/private/openemr.key;
 
         # SSL configuration
         ssl_protocols TLSv1.2 TLSv1.3;
@@ -82,28 +74,23 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
 
-        # Security headers
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-        add_header X-Frame-Options DENY always;
+        # Security headers - adjusted for OpenEMR compatibility
+        add_header X-Frame-Options SAMEORIGIN always;
         add_header X-Content-Type-Options nosniff always;
         add_header X-XSS-Protection "1; mode=block" always;
-        add_header Content-Security-Policy "upgrade-insecure-requests;" always;
+        # Removed restrictive CSP that was blocking content
 
         location / {
             proxy_pass http://openemr;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme; # $scheme will be 'https'
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
             proxy_set_header X-Forwarded-Port $server_port;
-            
-            # Increase timeouts for large uploads
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
-            
-            # Increase buffer sizes
             proxy_buffer_size 4k;
             proxy_buffers 8 4k;
             proxy_busy_buffers_size 8k;
