--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,9 @@ services:
     - 80:80
     - 443:443
     volumes:
-    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./nginx/nginx-fallback.conf:/etc/nginx/nginx.conf:ro
+    - ./ssl/openemr.crt:/etc/ssl/certs/openemr.crt:ro
+    - ./ssl/openemr.key:/etc/ssl/private/openemr.key:ro
     - certbot_certs:/etc/letsencrypt
     - certbot_www:/var/www/certbot
     depends_on:
