--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: mariadb:11.4
     command: ['mariadbd','--character-set-server=utf8mb4']
     volumes:
-    - databasevolume:/var/lib/mysql
+    - ./data/db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
 
@@ -14,8 +14,8 @@ services:
     restart: always
     image: openemr/openemr:7.0.3
     volumes:
-    - logvolume01:/var/log
-    - sitevolume:/var/www/localhost/htdocs/openemr/sites
+    - ./data/logs:/var/log
+    - ./data/openemr_sites:/var/www/localhost/htdocs/openemr/sites
     environment:
       MYSQL_HOST: mysql
       MYSQL_ROOT_PASS: ${MYSQL_ROOT_PASSWORD}
@@ -33,9 +33,9 @@ services:
     - 80:80
     - 443:443
     volumes:
-    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    - certbot_certs:/etc/letsencrypt
-    - certbot_www:/var/www/certbot
+    - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./data/certbot/certs:/etc/letsencrypt
+    - ./data/certbot/www:/var/www/certbot
     depends_on:
     - openemr
 
@@ -43,15 +43,9 @@ services:
     image: certbot/certbot
     restart: unless-stopped
     volumes:
-      - certbot_certs:/etc/letsencrypt
-      - certbot_www:/var/www/certbot
+      - ./data/certbot/certs:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     depends_on:
       - nginx
 
-volumes:
-  logvolume01: {}
-  sitevolume: {}
-  databasevolume: {}
-  certbot_certs: {}
-  certbot_www: {}
