Add CouchDB service for document storage

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ MYSQL_USER=openemr
 MYSQL_PASS=troque_esta_senha
 OE_USER=admin
 OE_PASS=troque_esta_senha_admin
+COUCHDB_USER=admin
+COUCHDB_PASSWORD=troque_esta_senha_couchdb
