--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,17 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
 
+  couchdb:
+    restart: always
+    image: couchdb:3
+    ports:
+      - "5984:5984"
+    volumes:
+      - ./data/couchdb:/opt/couchdb/data
+    environment:
+      COUCHDB_USER: ${COUCHDB_USER}
+      COUCHDB_PASSWORD: ${COUCHDB_PASSWORD}
+
   openemr:
     restart: always
     image: openemr/openemr:7.0.3
@@ -25,6 +36,7 @@ services:
       OE_PASS: ${OE_PASS}
     depends_on:
     - mysql
+    - couchdb
 
   nginx:
     restart: always
