--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     volumes:
     - ./data/logs:/var/log
     - ./data/openemr_sites:/var/www/localhost/htdocs/openemr/sites
+    - ./docker/php/redis-session.ini:/usr/local/etc/php/conf.d/redis-session.ini:ro
     environment:
       MYSQL_HOST: mysql
       MYSQL_ROOT_PASS: ${MYSQL_ROOT_PASSWORD}
@@ -25,6 +26,7 @@ services:
       OE_PASS: ${OE_PASS}
     depends_on:
     - mysql
+    - redis
 
   nginx:
     restart: always
@@ -48,4 +50,8 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     depends_on:
       - nginx
+
+  redis:
+    image: redis:7-alpine
+    restart: always
 
