feat: enhance compose setup with redis and crowdsec

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ OE_USER=admin
 OE_PASS=troque_esta_senha_admin
 COUCHDB_USER=admin
 COUCHDB_PASSWORD=troque_esta_senha_couchdb
+REDIS_PASSWORD=
+PHP_MEMORY_LIMIT=256M
