--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,22 @@ services:
     image: mariadb:11.4
     command: ['mariadbd','--character-set-server=utf8mb4']
     volumes:
-    - ./data/db:/var/lib/mysql
+      - ./data/db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   openemr:
     restart: always
     image: openemr/openemr:7.0.3
     volumes:
-    - ./data/logs:/var/log
-    - ./data/openemr_sites:/var/www/localhost/htdocs/openemr/sites
+      - ./data/logs:/var/log
+      - ./data/openemr_sites:/var/www/localhost/htdocs/openemr/sites
+      - ./docker/php/redis-session.ini:/usr/local/etc/php/conf.d/redis-session.ini:ro
     environment:
       MYSQL_HOST: mysql
       MYSQL_ROOT_PASS: ${MYSQL_ROOT_PASSWORD}
@@ -24,20 +30,31 @@ services:
       OE_USER: ${OE_USER}
       OE_PASS: ${OE_PASS}
     depends_on:
-    - mysql
+      - mysql
+      - redis
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   nginx:
     restart: always
     image: nginx:alpine
     ports:
-    - 80:80
-    - 443:443
+      - 80:80
+      - 443:443
     volumes:
-    - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    - ./data/certbot/certs:/etc/letsencrypt
-    - ./data/certbot/www:/var/www/certbot
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./data/certbot/certs:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     depends_on:
-    - openemr
+      - openemr
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   certbot:
     image: certbot/certbot
@@ -48,4 +65,18 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     depends_on:
       - nginx
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  redis:
+    image: redis:7-alpine
+    restart: always
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 
