Use example domain in nginx configs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Lint setup script
       run: |
-        shellcheck saraiva-vision-setup.sh update.sh backup.sh
+        shellcheck setup.sh update.sh backup.sh
 
     - name: Run smoke tests
       run: |
