--- a/nginx/nginx-fallback.conf
+++ b/nginx/nginx-fallback.conf
@@ -7,11 +7,11 @@ http {
         server openemr:80;
     }
 
-    # Server block for emr.saraivavision.com.br on port 80
+    # Server block for openemr.example.com on port 80
     # Handles ACME challenges and serves HTTP
     server {
         listen 80;
-        server_name emr.saraivavision.com.br;
+        server_name openemr.example.com;
 
         # ACME challenge handler
         location /.well-known/acme-challenge/ {
@@ -61,7 +61,7 @@ http {
     # HTTPS server using self-signed certificates
     server {
         listen 443 ssl;
-        server_name emr.saraivavision.com.br localhost;
+        server_name openemr.example.com localhost;
 
         # Self-signed certificates
         ssl_certificate /etc/ssl/certs/openemr.crt;
