--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,11 +7,11 @@ http {
         server openemr:80;
     }
 
-    # Server block for emr.saraivavision.com.br on port 80
+    # Server block for openemr.example.com on port 80
     # Handles ACME challenges and serves HTTP
     server {
         listen 80;
-        server_name emr.saraivavision.com.br;
+        server_name openemr.example.com;
 
         # ACME challenge handler
         location /.well-known/acme-challenge/ {
@@ -61,15 +61,15 @@ http {
         }
     }
 
-    # HTTPS server (for emr.saraivavision.com.br)
+    # HTTPS server (for openemr.example.com)
     # Uses self-signed certificates as fallback, can be upgraded to Let's Encrypt later
     server {
         listen 443 ssl;
-        server_name emr.saraivavision.com.br;
+        server_name openemr.example.com;
 
         # Try Let's Encrypt certificates first, fallback to self-signed
-        ssl_certificate /etc/letsencrypt/live/emr.saraivavision.com.br/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/emr.saraivavision.com.br/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/openemr.example.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/openemr.example.com/privkey.pem;
 
         # Fallback to self-signed certificates if Let's Encrypt not available
         # ssl_certificate /etc/ssl/certs/openemr.crt;
