Add rclone support to backup

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ MYSQL_USER=openemr
 MYSQL_PASS=troque_esta_senha
 OE_USER=admin
 OE_PASS=troque_esta_senha_admin
+# Opcional: destino remoto rclone para backups
+# Exemplo: RCLONE_REMOTE=s3:meubucket/backups
+#RCLONE_REMOTE=
