--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Lint Docker Compose file
       run: |
-        docker-compose --env-file .env.example -f docker-compose.yml config
+        docker compose --env-file .env.example -f docker-compose.yml config
 
     - name: Install ShellCheck
       run: sudo apt-get update && sudo apt-get install -y shellcheck
@@ -27,8 +27,8 @@ jobs:
 
     - name: Run smoke tests
       run: |
-        docker-compose --env-file .env.example up -d
+        docker compose --env-file .env.example up -d
         sleep 30
         ./backup.sh
-        curl -f http://localhost || (docker-compose logs; exit 1)
-        docker-compose down
+        curl -f http://localhost || (docker compose logs; exit 1)
+        docker compose down
