--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ MYSQL_USER=openemr
 MYSQL_PASS=troque_esta_senha
 OE_USER=admin
 OE_PASS=troque_esta_senha_admin
+# Credenciais para o CouchDB opcional
+#COUCHDB_USER=admin
+#COUCHDB_PASSWORD=troque_esta_senha_couch
 # Opcional: destino remoto rclone para backups
 # Exemplo: RCLONE_REMOTE=s3:meubucket/backups
 #RCLONE_REMOTE=
