--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,20 @@ services:
     - databasevolume:/var/lib/mysql
     - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf:ro
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD} # Usando variável de ambiente
+
+    healthcheck:
+      test:
+      - CMD
+      - /usr/local/bin/healthcheck.sh
+      - --su-mysql
+      - --connect
+      - --innodb_initialized
+      start_period: 1m
+      start_interval: 10s
+      interval: 1m
+      timeout: 5s
+      retries: 3
 
   couchdb:
     restart: always
@@ -25,19 +38,38 @@ services:
   openemr:
     restart: always
     image: openemr/openemr:7.0.3
+    ports:
+    - 80:80
+    - 443:443
     volumes:
     - logvolume01:/var/log
     - sitevolume:/var/www/localhost/htdocs/openemr/sites
     - ./apache/servername.conf:/etc/apache2/conf.d/servername.conf:ro
     environment:
       MYSQL_HOST: mysql
-      MYSQL_ROOT_PASS: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASS: ${MYSQL_PASS}
-      OE_USER: ${OE_USER}
-      OE_PASS: ${OE_PASS}
+      MYSQL_ROOT_PASS: ${MYSQL_ROOT_PASSWORD} # Usando variável de ambiente
+      MYSQL_USER: ${MYSQL_USER}             # Usando variável de ambiente
+      MYSQL_PASS: ${MYSQL_PASS}             # Usando variável de ambiente
+      OE_USER: ${OE_USER}                 # Usando variável de ambiente
+      OE_PASS: ${OE_PASS}                 # Usando variável de ambiente
     depends_on:
-    - mysql
+      mysql:
+        condition: service_healthy
+    healthcheck:
+      test:
+      - CMD
+      - /usr/bin/curl
+      - --fail
+      - --insecure
+      - --location
+      - --show-error
+      - --silent
+      - https://localhost/
+      start_period: 3m
+      start_interval: 10s
+      interval: 1m
+      timeout: 5s
+      retries: 3
 
   nginx:
     restart: always
