--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Run pre-commit
+      uses: pre-commit/action@v3.0.0
+
     - name: Lint Docker Compose file
       run: |
         docker compose --env-file .env.example -f docker-compose.yml config
@@ -32,3 +35,6 @@ jobs:
         ./backup.sh
         curl -f http://localhost || (docker compose logs; exit 1)
         docker compose down
+
+    - name: Run unit tests
+      run: ./run-tests.sh
