Add comprehensive documentation

--- a/nginx/nginx-fallback.conf
+++ b/nginx/nginx-fallback.conf
@@ -7,11 +7,11 @@ http {
         server openemr:80;
     }
 
-    # Server block for openemr.example.com on port 80
+    # Server block for openemr.test on port 80
     # Handles ACME challenges and serves HTTP
     server {
         listen 80;
-        server_name openemr.example.com;
+        server_name openemr.test;
 
         # ACME challenge handler
         location /.well-known/acme-challenge/ {
@@ -66,7 +66,7 @@ http {
     # HTTPS server using self-signed certificates
     server {
         listen 443 ssl;
-        server_name openemr.example.com localhost;
+        server_name openemr.test localhost;
 
         # Self-signed certificates
         ssl_certificate /etc/ssl/certs/openemr.crt;
