Sanitize domain info and collect credentials during setup

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 # Variaveis de ambiente para OpenEMR
 # Copie este arquivo para .env e defina senhas seguras
-MYSQL_ROOT_PASSWORD=troque_esta_senha_root
+# Valores "change_me" devem ser substituidos durante a instalacao
+MYSQL_ROOT_PASSWORD=change_me_root
 MYSQL_USER=openemr
-MYSQL_PASS=troque_esta_senha
+MYSQL_PASS=change_me
 OE_USER=admin
-OE_PASS=troque_esta_senha_admin
+OE_PASS=change_me_admin
 # Credenciais para o CouchDB opcional
 #COUCHDB_USER=admin
 #COUCHDB_PASSWORD=troque_esta_senha_couch
